@@ -9,6 +9,11 @@ cdebconf (0.117) UNRELEASED; urgency=low
   * Reduce the usage of casting to struct frontend_data on GTK frontend
     code. Closes: #426745.
 
+  [ Colin Watson ]
+  * Remove five function pointers in every struct template that always
+    pointed to the same functions (or were entirely unused, in the cases of
+    get and set); export those functions from template.c instead.
+
  -- Attilio Fiandrotti <attilio.fiandrotti@gmail.com>  Mon, 18 Jun 2007 15:35:11 +0200
 
 cdebconf (0.116) unstable; urgency=low
